--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link
       rel="icon"
-      href="%PUBLIC_URL%/favicon.ico"
+      href="%PUBLIC_URL%/movie_app_logo_circle.png"
     />
     <meta
       name="viewport"
