added a responsive mobile navbar

--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,9 @@
     />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="A simple movie management app where you can add, edit, and browse movies. Features include user authentication, profile management, and a clean, responsive interface."
     />
+
     <link
       rel="apple-touch-icon"
       href="%PUBLIC_URL%/logo192.png"
@@ -39,7 +40,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Movies</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
